--- a/maven/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/maven/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -1,4 +1,6 @@
 #!/usr/bin/groovy
+@Library('github.com/fabric8io/fabric8-pipeline-plugin@master')
+
 def localItestPattern = ""
 try {
   localItestPattern = ITEST_PATTERN
