--- a/maven/Install/Jenkinsfile
+++ b/maven/Install/Jenkinsfile
@@ -1,4 +1,6 @@
 #!/usr/bin/groovy
+@Library('github.com/fabric8io/fabric8-pipeline-plugin@master')
+
 def label = "buildpod.${env.JOB_NAME}.${env.BUILD_NUMBER}".replace('-', '_').replace('/', '_')
 
 podTemplate(label: label, containers: [
