include jenkins service account in build pods

--- a/maven/BuildImage/Jenkinsfile
+++ b/maven/BuildImage/Jenkinsfile
@@ -13,7 +13,7 @@ try {
 def canaryVersion = "${versionPrefix}.${env.BUILD_NUMBER}"
 def label = "buildpod.${env.JOB_NAME}.${env.BUILD_NUMBER}".replace('-', '_').replace('/', '_')
 
-podTemplate(label: label, containers: [
+podTemplate(label: label, serviceAccount: 'jenkins', containers: [
         [name: 'maven', image: 'fabric8/maven-builder', command: 'cat', ttyEnabled: true, envVars: [
                 [key: 'MAVEN_OPTS', value:'-Duser.home=/home/jenkins/'],
                 [key: 'DOCKER_CONFIG', value:'/home/jenkins/.docker/'],
