--- a/maven/CanaryRelease/Jenkinsfile
+++ b/maven/CanaryRelease/Jenkinsfile
@@ -27,7 +27,7 @@ def canaryVersion = "${versionPrefix}.${env.BUILD_NUMBER}"
 def utils = new io.fabric8.Utils()
 def label = "buildpod.${env.JOB_NAME}.${env.BUILD_NUMBER}".replace('-', '_').replace('/', '_')
 
-podTemplate(label: label, containers: [
+podTemplate(label: label, serviceAccount: 'jenkins', containers: [
         [name: 'maven', image: 'fabric8/maven-builder', command: 'cat', ttyEnabled: true, envVars: [
                 [key: 'MAVEN_OPTS', value: '-Duser.home=/home/jenkins/'],
                 [key: 'DOCKER_CONFIG', value: '/home/jenkins/.docker/'],
