updated non java pipelines to use a clients builder pod rather that kubernetes-pipeline-plugin build image

--- a/dotnet/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/dotnet/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -6,17 +6,19 @@ def utils = new io.fabric8.Utils()
 node {
   def envStage = utils.environmentNamespace('staging')
   def envProd = utils.environmentNamespace('production')
+  def newVersion = ''
 
-  git GIT_URL
+  clientsNode{
+    git GIT_URL
 
-  stage 'Canary release'
-  echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
-  if (!fileExists ('Dockerfile')) {
-    writeFile file: 'Dockerfile', text: 'FROM microsoft/dotnet:onbuild'
+    stage 'Canary release'
+    echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
+    if (!fileExists ('Dockerfile')) {
+      writeFile file: 'Dockerfile', text: 'FROM microsoft/dotnet:onbuild'
+    }
+
+    newVersion = performCanaryRelease {}
   }
-
-  def newVersion = performCanaryRelease {}
-
   def rc = getKubernetesJson {
     port = 5000
     label = 'dotnet'
