--- a/php/CanaryReleaseStage/Jenkinsfile
+++ b/php/CanaryReleaseStage/Jenkinsfile
@@ -5,16 +5,19 @@ def utils = new io.fabric8.Utils()
 
 node {
   def envStage = utils.environmentNamespace('staging')
-  git GIT_URL
+  def newVersion = ''
 
-  stage 'Canary release'
-  echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
-  if (!fileExists ('Dockerfile')) {
-    writeFile file: 'Dockerfile', text: 'FROM fabric8/php:onbuild'
+  clientsNode{
+    git GIT_URL
+    stage 'Canary release'
+    echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
+    if (!fileExists ('Dockerfile')) {
+      writeFile file: 'Dockerfile', text: 'FROM fabric8/php:onbuild'
+    }
+
+    newVersion = performCanaryRelease {}
   }
-
-  def newVersion = performCanaryRelease {}
-
+  
   def rc = getKubernetesJson {
     port = 80
     label = 'php'
