--- a/php/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/php/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -6,24 +6,27 @@ def utils = new io.fabric8.Utils()
 node {
   def envStage = utils.environmentNamespace('staging')
   def envProd = utils.environmentNamespace('production')
+  def newVersion = ''
 
-  git GIT_URL
+  clientsNode{
+    git GIT_URL
 
-  stage 'Canary release'
-  echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
-  if (!fileExists ('Dockerfile')) {
-    writeFile file: 'Dockerfile', text: 'FROM fabric8/php:onbuild'
+    stage 'Canary release'
+    echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
+    if (!fileExists ('Dockerfile')) {
+      writeFile file: 'Dockerfile', text: 'FROM fabric8/php:onbuild'
+    }
+
+    newVersion = performCanaryRelease {}
   }
 
-  def newVersion = performCanaryRelease {}
-
-    def rc = getKubernetesJson {
-      port = 80
-      label = 'php'
-      icon = 'https://cdn.rawgit.com/fabric8io/fabric8/aebfa59/website/src/images/logos/php.png'
-      version = newVersion
-      imageName = clusterImageName
-    }
+  def rc = getKubernetesJson {
+    port = 80
+    label = 'php'
+    icon = 'https://cdn.rawgit.com/fabric8io/fabric8/aebfa59/website/src/images/logos/php.png'
+    version = newVersion
+    imageName = clusterImageName
+  }
 
   stage 'Rolling upgrade Staging'
   kubernetesApply(file: rc, environment: envStage)
