--- a/swift/CanaryReleaseStage/Jenkinsfile
+++ b/swift/CanaryReleaseStage/Jenkinsfile
@@ -5,17 +5,19 @@ def utils = new io.fabric8.Utils()
 
 node {
   def envStage = utils.environmentNamespace('staging')
+  def newVersion = ''
 
-  git GIT_URL
+  clientsNode{
+    git GIT_URL
 
-  stage 'Canary release'
-  echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
-  if (!fileExists ('Dockerfile')) {
-    writeFile file: 'Dockerfile', text: 'FROM fabric8/swift:2.2-SNAPSHOT-onbuild'
+    stage 'Canary release'
+    echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
+    if (!fileExists ('Dockerfile')) {
+      writeFile file: 'Dockerfile', text: 'FROM fabric8/swift:2.2-SNAPSHOT-onbuild'
+    }
+
+    newVersion = performCanaryRelease {}
   }
-
-  def newVersion = performCanaryRelease {}
-
   def rc = getKubernetesJson {
     port = 8080
     label = 'swift'
