--- a/maven/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/maven/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -50,7 +50,7 @@ podTemplate(label: label, serviceAccount: 'jenkins', containers: [
     echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
     container(name: 'maven') {
 
-      stage 'Canary Release'
+      stage 'Build Release'
       mavenCanaryRelease {
         version = canaryVersion
       }
