lets use "Rollout" as the name of deploying to environments as its the canonical name and term in kubectl now and is shorter and more concise

--- a/golang/CanaryReleaseStage/Jenkinsfile
+++ b/golang/CanaryReleaseStage/Jenkinsfile
@@ -27,7 +27,7 @@ node {
     imageName = clusterImageName
   }
 
-  stage 'Rolling upgrade Staging'
+  stage 'Rollout Staging'
   kubernetesApply(file: rc, environment: envStage)
 
 }
