--- a/golang/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/golang/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -28,7 +28,7 @@ node {
     imageName = clusterImageName
   }
 
-  stage 'Rolling upgrade Staging'
+  stage 'Rollout Staging'
   kubernetesApply(file: rc, environment: envStage)
 
   stage 'Approve'
@@ -39,7 +39,7 @@ node {
     environment = envStage
   }
 
-  stage 'Rolling upgrade Production'
+  stage 'Rollout Production'
   kubernetesApply(file: rc, environment: envProd)
 
 }
