--- a/django/CanaryReleaseStage/Jenkinsfile
+++ b/django/CanaryReleaseStage/Jenkinsfile
@@ -26,7 +26,7 @@ node {
     imageName = clusterImageName
   }
 
-  stage 'Rolling upgrade Staging'
+  stage 'Rollout Staging'
   def envStage = environmentNamespace("staging")
   kubernetesApply(file: rc, environment: envStage)
 
