--- a/dotnet/CanaryReleaseStage/Jenkinsfile
+++ b/dotnet/CanaryReleaseStage/Jenkinsfile
@@ -26,7 +26,7 @@ node {
     imageName = clusterImageName
   }
 
-  stage 'Rolling upgrade Staging'
+  stage 'Rollout Staging'
   kubernetesApply(file: rc, environment: envStage)
 
 }
