--- a/node/CanaryReleaseStage/Jenkinsfile
+++ b/node/CanaryReleaseStage/Jenkinsfile
@@ -27,7 +27,7 @@ node {
     imageName = clusterImageName
   }
 
-  stage 'Rolling upgrade Staging'
+  stage 'Rollout Staging'
   kubernetesApply(file: rc, environment: envStage)
 
 }
