Updated Jenkinsfiles with new library version 2.2.303

--- a/maven/CanaryRelease/Jenkinsfile
+++ b/maven/CanaryRelease/Jenkinsfile
@@ -1,5 +1,5 @@
 #!/usr/bin/groovy
-@Library('github.com/fabric8io/fabric8-pipeline-library@master')
+@Library('github.com/fabric8io/fabric8-pipeline-library@2.2.303')
 
 def failIfNoTests = ""
 try {
