--- a/maven/BuildImage/Jenkinsfile
+++ b/maven/BuildImage/Jenkinsfile
@@ -1,5 +1,5 @@
 #!/usr/bin/groovy
-@Library('github.com/fabric8io/fabric8-pipeline-library@master')
+@Library('github.com/fabric8io/fabric8-pipeline-library@2.2.303')
 
 // lets allow the VERSION_PREFIX to be specified as a parameter to the build
 // but if not lets just default to 1.0
