--- a/django/CanaryReleaseStage/Jenkinsfile
+++ b/django/CanaryReleaseStage/Jenkinsfile
@@ -1,5 +1,5 @@
 #!/usr/bin/groovy
-@Library('github.com/fabric8io/fabric8-pipeline-library@master')
+@Library('github.com/fabric8io/fabric8-pipeline-library@v2.2.305')
 
 def utils = new io.fabric8.Utils()
 
