--- a/django/CanaryReleaseStage/Jenkinsfile
+++ b/django/CanaryReleaseStage/Jenkinsfile
@@ -14,7 +14,7 @@ clientsNode{
 
   newVersion = performCanaryRelease {}
 
-  def rc = getKubernetesJson {
+  def rc = getDeploymentResources {
     port = 8000
     label = 'django'
     icon = 'https://cdn.rawgit.com/fabric8io/fabric8/dc05040/website/src/images/logos/django.svg'
