--- a/dotnet/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/dotnet/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -18,7 +18,7 @@ clientsNode{
 
   newVersion = performCanaryRelease {}
 
-  def rc = getKubernetesJson {
+  def rc = getDeploymentResources {
     port = 5000
     label = 'dotnet'
     icon = 'https://cdn.rawgit.com/fabric8io/fabric8/392b07b/website/src/images/logos/dotnet.png'
