--- a/golang/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/golang/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -16,7 +16,7 @@ clientsNode{
 
   newVersion = performCanaryRelease {}
   
-  def rc = getKubernetesJson {
+  def rc = getDeploymentResources {
     port = 8080
     label = 'golang'
     icon = 'https://cdn.rawgit.com/fabric8io/fabric8/dc05040/website/src/images/logos/gopher.png'
