--- a/node/CanaryReleaseStage/Jenkinsfile
+++ b/node/CanaryReleaseStage/Jenkinsfile
@@ -15,7 +15,7 @@ clientsNode{
 
   newVersion = performCanaryRelease {}
 
-  def rc = getKubernetesJson {
+  def rc = getDeploymentResources {
     port = 8080
     label = 'nodejs'
     icon = 'https://cdn.rawgit.com/fabric8io/fabric8/dc05040/website/src/images/logos/nodejs.svg'
