--- a/rails/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/rails/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -16,7 +16,7 @@ clientsNode{
 
   newVersion = performCanaryRelease {}
 
-  def rc = getKubernetesJson {
+  def rc = getDeploymentResources {
     port = 3000
     label = 'rails'
     icon = 'https://cdn.rawgit.com/fabric8io/fabric8-console/38f589a/img/icons/ruby.png'
