--- a/swift/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/swift/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -16,7 +16,7 @@ clientsNode{
 
   newVersion = performCanaryRelease {}
 
-  def rc = getKubernetesJson {
+  def rc = getDeploymentResources {
     port = 8080
     label = 'swift'
     icon = 'https://cdn.rawgit.com/fabric8io/fabric8-console/master/img/icons/swift.png'
