--- a/maven/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/maven/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -27,10 +27,11 @@ def canaryVersion = "${versionPrefix}.${env.BUILD_NUMBER}"
 def fabric8Console = "${env.FABRIC8_CONSOLE ?: ''}"
 def utils = new io.fabric8.Utils()
 def label = "buildpod.${env.JOB_NAME}.${env.BUILD_NUMBER}".replace('-', '_').replace('/', '_')
+def envStage = utils.environmentNamespace('staging')
+def envProd = utils.environmentNamespace('production')
+def stashName = ""
 
-mavenNode{
-  def envStage = utils.environmentNamespace('staging')
-  def envProd = utils.environmentNamespace('production')
+mavenNode {
 
   git GIT_URL
 
@@ -51,7 +52,13 @@ mavenNode{
 
     stage 'Rollout Staging'
     kubernetesApply(environment: envStage)
+    //stash deployments
+    stashName = label
+    stash includes: '**/*', name: stashName
+  }
+}
 
+node {
     stage 'Approve'
     approve {
       room = null
@@ -61,7 +68,14 @@ mavenNode{
     }
 
     stage 'Rollout Production'
-    kubernetesApply(environment: envProd)
+    unstash stashName
+    def files = findFiles(glob: '**/fabric8/kubernetes.yml')
 
-  }
+
+    for(i = 0; i < files.length; i++) {
+      echo "applying the -${files[i].path}- to Kubernetes"
+      def fileContent = readFile(files[i].path)
+      kubernetesApply(file: fileContent,environment: envProd)
+    }
+
 }
