add CI pipelines for maven to start with

--- a/maven/CanaryReleaseAndStage/Jenkinsfile
+++ b/maven/CanaryReleaseAndStage/Jenkinsfile
@@ -27,28 +27,35 @@ def canaryVersion = "${versionPrefix}.${env.BUILD_NUMBER}"
 def utils = new io.fabric8.Utils()
 def label = "buildpod.${env.JOB_NAME}.${env.BUILD_NUMBER}".replace('-', '_').replace('/', '_')
 
-mavenNode{
-  def envStage = utils.environmentNamespace('staging')
+if (utils.isCI()){
+  mavenNode {
+    mavenCI{}
+  }
+} else if (utils.isCD()){
+  mavenNode{
+    def envStage = utils.environmentNamespace('staging')
 
-  git GIT_URL
+    git GIT_URL
 
-  echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
-  container(name: 'maven') {
+    echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
+    container(name: 'maven') {
 
-    stage 'Build Release'
-    mavenCanaryRelease {
-      version = canaryVersion
+      stage 'Build Release'
+      mavenCanaryRelease {
+        version = canaryVersion
+      }
+
+      stage 'Integration Test'
+      mavenIntegrationTest {
+        environment = 'Testing'
+        failIfNoTests = localFailIfNoTests
+        itestPattern = localItestPattern
+      }
+
+      stage 'Rollout Staging'
+      kubernetesApply(environment: envStage)
+
     }
-
-    stage 'Integration Test'
-    mavenIntegrationTest {
-      environment = 'Testing'
-      failIfNoTests = localFailIfNoTests
-      itestPattern = localItestPattern
-    }
-
-    stage 'Rollout Staging'
-    kubernetesApply(environment: envStage)
-
   }
 }
+
