lets use parens on stage functions to fix breaking on newer plugin versions

--- a/django/CanaryReleaseStage/Jenkinsfile
+++ b/django/CanaryReleaseStage/Jenkinsfile
@@ -6,7 +6,7 @@ clientsNode{
   def newVersion = ''
 
   git GIT_URL
-  stage 'Canary release'
+  stage('Canary release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM django:onbuild'
@@ -22,7 +22,7 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage 'Rollout Staging'
+  stage('Rollout Staging')
   def envStage = environmentNamespace("staging")
   kubernetesApply(file: rc, environment: envStage)
 }
