--- a/django/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/django/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -7,7 +7,7 @@ clientsNode{
   def newVersion = ''
 
   git GIT_URL
-  stage 'Canary release'
+  stage('Canary release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM django:onbuild'
@@ -23,10 +23,10 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage 'Rollout Staging'
+  stage('Rollout Staging')
   kubernetesApply(file: rc, environment: envStage)
 
-  stage 'Approve'
+  stage('Approve')
   approve{
     room = null
     version = canaryVersion
@@ -34,6 +34,6 @@ clientsNode{
     environment = envStage
   }
 
-  stage 'Rollout Production'
+  stage('Rollout Production')
   kubernetesApply(file: rc, environment: envProd)
 }
