--- a/maven/CanaryRelease/Jenkinsfile
+++ b/maven/CanaryRelease/Jenkinsfile
@@ -38,13 +38,13 @@ mavenNode{
     echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
     container(name: 'maven') {
 
-      stage 'Build Release'{
+      stage('Build Release'){
         mavenCanaryRelease {
           version = canaryVersion
         }
       }
       
-      stage 'Integration Test'{
+      stage('Integration Test'){
         mavenIntegrationTest {
           environment = 'Testing'
           failIfNoTests = localFailIfNoTests
