--- a/node/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/node/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -8,7 +8,7 @@ clientsNode{
 
   git GIT_URL
 
-  stage 'Canary release'
+  stage('Canary release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM node:5.3-onbuild'
@@ -24,10 +24,10 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage 'Rollout Staging'
+  stage('Rollout Staging')
   kubernetesApply(file: rc, environment: envStage)
 
-  stage 'Approve'
+  stage('Approve')
   approve{
     room = null
     version = canaryVersion
@@ -35,7 +35,7 @@ clientsNode{
     environment = envStage
   }
 
-  stage 'Rollout Production'
+  stage('Rollout Production')
   kubernetesApply(file: rc, environment: envProd)
 
 }
