--- a/dotnet/CanaryReleaseStage/Jenkinsfile
+++ b/dotnet/CanaryReleaseStage/Jenkinsfile
@@ -6,7 +6,7 @@ clientsNode{
   def newVersion = ''
 
   git GIT_URL
-  stage 'Canary release'
+  stage('Canary release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM microsoft/dotnet:onbuild'
@@ -22,6 +22,6 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage 'Rollout Staging'
+  stage('Rollout Staging')
   kubernetesApply(file: rc, environment: envStage)
 }
