--- a/php/CanaryReleaseStage/Jenkinsfile
+++ b/php/CanaryReleaseStage/Jenkinsfile
@@ -8,7 +8,7 @@ clientsNode{
   def newVersion = ''
 
   git GIT_URL
-  stage 'Canary release'
+  stage('Canary release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM fabric8/php:onbuild'
@@ -24,7 +24,7 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage 'Rollout Staging'
+  stage('Rollout Staging')
   kubernetesApply(file: rc, environment: envStage)
 
 }
