--- a/swift/CanaryReleaseStage/Jenkinsfile
+++ b/swift/CanaryReleaseStage/Jenkinsfile
@@ -7,7 +7,7 @@ clientsNode{
 
   git GIT_URL
 
-  stage 'Canary release'
+  stage('Canary release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM fabric8/swift:2.2-SNAPSHOT-onbuild'
@@ -23,6 +23,6 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage 'Rollout Staging'
+  stage('Rollout Staging')
   kubernetesApply(file: rc, environment: envStage)
 }
