upgrade to the new canonical environment names and polish the stages

--- a/django/CanaryReleaseStage/metadata.yml
+++ b/django/CanaryReleaseStage/metadata.yml
@@ -1,5 +1,5 @@
 environments:
-  - Staging
+  - Stage
 stages:
-  - 'canary release'
-  - 'Rolling upgrade Staging'
+  - 'Create Release'
+  - 'Rollout to Stage'
