--- a/django/CanaryReleaseStage/Jenkinsfile
+++ b/django/CanaryReleaseStage/Jenkinsfile
@@ -2,11 +2,11 @@
 @Library('github.com/fabric8io/fabric8-pipeline-library@master')
 def utils = new io.fabric8.Utils()
 clientsNode{
-  def envStage = utils.environmentNamespace('staging')
+  def envStage = utils.environmentNamespace('stage')
   def newVersion = ''
 
   git GIT_URL
-  stage('Canary release')
+  stage('Create Release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM django:onbuild'
@@ -22,7 +22,7 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage('Rollout Staging')
-  def envStage = environmentNamespace("staging")
+  stage('Rollout to Stage')
+  def envStage = environmentNamespace("stage")
   kubernetesApply(file: rc, environment: envStage)
 }
