--- a/django/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/django/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -2,12 +2,12 @@
 @Library('github.com/fabric8io/fabric8-pipeline-library@master')
 def utils = new io.fabric8.Utils()
 clientsNode{
-  def envStage = utils.environmentNamespace('staging')
-  def envProd = utils.environmentNamespace('production')
+  def envStage = utils.environmentNamespace('stage')
+  def envProd = utils.environmentNamespace('run')
   def newVersion = ''
 
   git GIT_URL
-  stage('Canary release')
+  stage('Create Release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM django:onbuild'
@@ -23,7 +23,7 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage('Rollout Staging')
+  stage('Rollout to Stage')
   kubernetesApply(file: rc, environment: envStage)
 
   stage('Approve')
@@ -34,6 +34,6 @@ clientsNode{
     environment = envStage
   }
 
-  stage('Rollout Production')
+  stage('Rollout to Run')
   kubernetesApply(file: rc, environment: envProd)
 }
