--- a/dotnet/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/dotnet/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -4,13 +4,13 @@
 def utils = new io.fabric8.Utils()
 
 clientsNode{
-  def envStage = utils.environmentNamespace('staging')
-  def envProd = utils.environmentNamespace('production')
+  def envStage = utils.environmentNamespace('stage')
+  def envProd = utils.environmentNamespace('run')
   def newVersion = ''
 
   git GIT_URL
 
-  stage('Canary release')
+  stage('Create Release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM microsoft/dotnet:onbuild'
@@ -26,7 +26,7 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage('Rollout Staging')
+  stage('Rollout to Stage')
   kubernetesApply(file: rc, environment: envStage)
 
   stage('Approve')
@@ -37,6 +37,6 @@ clientsNode{
     environment = envStage
   }
 
-  stage('Rollout Production')
+  stage('Rollout to Run')
   kubernetesApply(file: rc, environment: envProd)
 }
