--- a/maven/CanaryReleaseAndStage/Jenkinsfile
+++ b/maven/CanaryReleaseAndStage/Jenkinsfile
@@ -35,7 +35,7 @@ mavenNode {
     
   } else if (utils.isCD()){
     
-    def envStage = utils.environmentNamespace('staging')
+    def envStage = utils.environmentNamespace('stage')
 
     echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
     container(name: 'maven') {
@@ -47,12 +47,12 @@ mavenNode {
 
       stage('Integration Test')
       mavenIntegrationTest {
-        environment = 'Testing'
+        environment = 'Test'
         failIfNoTests = localFailIfNoTests
         itestPattern = localItestPattern
       }
 
-      stage('Rollout Staging')
+      stage('Rollout to Stage')
       kubernetesApply(environment: envStage)
 
     }
