--- a/maven/CanaryReleaseAndStage/metadata.yml
+++ b/maven/CanaryReleaseAndStage/metadata.yml
@@ -1,7 +1,7 @@
 environments:
-  - Testing
-  - Staging
+  - Test
+  - Stage
 stages:
-  - 'canary image'
-  - 'integration test'
-  - 'Rolling upgrade Staging'
+  - 'Create Release'
+  - 'Integration Test'
+  - 'Rollout to Stage'
