--- a/node/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/node/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -2,13 +2,13 @@
 @Library('github.com/fabric8io/fabric8-pipeline-library@master')
 def utils = new io.fabric8.Utils()
 clientsNode{
-  def envStage = utils.environmentNamespace('staging')
-  def envProd = utils.environmentNamespace('production')
+  def envStage = utils.environmentNamespace('stage')
+  def envProd = utils.environmentNamespace('run')
   def newVersion = ''
 
   git GIT_URL
 
-  stage('Canary release')
+  stage('Create Release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM node:5.3-onbuild'
@@ -24,7 +24,7 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage('Rollout Staging')
+  stage('Rollout to Stage')
   kubernetesApply(file: rc, environment: envStage)
 
   stage('Approve')
@@ -35,7 +35,7 @@ clientsNode{
     environment = envStage
   }
 
-  stage('Rollout Production')
+  stage('Rollout to Run')
   kubernetesApply(file: rc, environment: envProd)
 
 }
