--- a/swift/CanaryReleaseStage/Jenkinsfile
+++ b/swift/CanaryReleaseStage/Jenkinsfile
@@ -2,12 +2,12 @@
 @Library('github.com/fabric8io/fabric8-pipeline-library@master')
 def utils = new io.fabric8.Utils()
 clientsNode{
-  def envStage = utils.environmentNamespace('staging')
+  def envStage = utils.environmentNamespace('stage')
   def newVersion = ''
 
   git GIT_URL
 
-  stage('Canary release')
+  stage('Create Release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
   if (!fileExists ('Dockerfile')) {
     writeFile file: 'Dockerfile', text: 'FROM fabric8/swift:2.2-SNAPSHOT-onbuild'
@@ -23,6 +23,6 @@ clientsNode{
     imageName = clusterImageName
   }
 
-  stage('Rollout Staging')
+  stage('Rollout to Stage')
   kubernetesApply(file: rc, environment: envStage)
 }
