--- a/dotnet/CanaryReleaseStageAndApprovePromote/Jenkinsfile
+++ b/dotnet/CanaryReleaseStageAndApprovePromote/Jenkinsfile
@@ -8,7 +8,7 @@ clientsNode{
   def envProd = utils.environmentNamespace('run')
   def newVersion = ''
 
-  git GIT_URL
+  checkout scm
 
   stage('Create Release')
   echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
