renamed the pipelines to remove Canary and polish the metadata and docs

--- a/maven/ReleaseAndStage/metadata.yml
+++ b/maven/ReleaseAndStage/metadata.yml
@@ -1,5 +1,7 @@
 environments:
   - Test
+  - Stage
 stages:
-  - 'Create Release'
+  - 'Build Release'
   - 'Integration Test'
+  - 'Rollout to Stage'
