use new booster integration test pattern

--- a/maven/ReleaseAndStage/Jenkinsfile
+++ b/maven/ReleaseAndStage/Jenkinsfile
@@ -12,7 +12,7 @@ def localItestPattern = ""
 try {
   localItestPattern = ITEST_PATTERN
 } catch (Throwable e) {
-  localItestPattern = "*KT"
+  localItestPattern = "*IT"
 }
 
 
