--- a/maven/Release/metadata.yml
+++ b/maven/Release/metadata.yml
@@ -1,5 +1,9 @@
+suggested: true
+tech-preview: false
 environments:
   - Test
 stages:
-  - 'Build Release'
-  - 'Integration Test'
+  - name: Build Release
+    description: creates a new version then builds and deploys the project into the maven repository 
+  - name: Integration Test
+    description: runs an integration test in the Test environment 
