--- a/maven/ReleaseStageApproveAndPromote/metadata.yml
+++ b/maven/ReleaseStageApproveAndPromote/metadata.yml
@@ -1,10 +1,18 @@
+suggested: true
+tech-preview: false
 environments:
   - Test
   - Stage
   - Run
 stages:
-  - 'Build Release'
-  - 'Integration Test'
-  - 'Rollout to Stage'
-  - 'Approve'
-  - 'Rollout to Run'
+  - name: Build Release
+    description: creates a new version then builds and deploys the project into the maven repository 
+  - name: Integration Test
+    description: runs an integration test in the Test environment 
+  - name: Rollout to Stage
+    description: stages the new version into the Stage environment
+  - name: Approve
+    description: waits for Approval to promote 
+  - name: Rollout to Run
+    description: promotes to the Run environment 
+ 
