--- a/rails/ReleaseStageApproveAndPromote/metadata.yml
+++ b/rails/ReleaseStageApproveAndPromote/metadata.yml
@@ -1,8 +1,15 @@
+suggested: true
+tech-preview: false
 environments:
   - Stage
   - Run
 stages:
-  - 'Build Release'
-  - 'Rollout to Stage'
-  - 'Approve'
-  - 'Rollout to Run'
+  - name: Build Release
+    description: creates a new version then builds and deploys the project into the maven repository 
+  - name: Rollout to Stage
+    description: stages the new version into the Stage environment
+  - name: Approve
+    description: waits for Approval to promote 
+  - name: Rollout to Run
+    description: promotes to the Run environment 
+ 
