Update maven pipelines (#41)
* Update maven pipelines

- Release, ReleaseandStage, ReleaseStageApproveAndPromote
  - Name and description
- Change from Build release to Build Image
- Add shell:'/bin/bash'
- Fix after rebase

--- a/maven/Release/Jenkinsfile
+++ b/maven/Release/Jenkinsfile
@@ -19,7 +19,7 @@ mavenNode {
 
   } else if (utils.isCD()) {
     echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
-    container(name: 'maven') {
+    container(name: 'maven', shell:'/bin/bash') {
       stage('Build Image') {
         mavenCanaryRelease {
           version = canaryVersion
