--- a/maven/ReleaseStageApproveAndPromote/Jenkinsfile
+++ b/maven/ReleaseStageApproveAndPromote/Jenkinsfile
@@ -37,7 +37,7 @@ mavenNode {
     }
 
     echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
-    container(name: 'maven') {
+    container(name: 'maven', shell:'/bin/bash') {
       stage('Build Image') {
         mavenCanaryRelease {
           version = canaryVersion
