--- a/golang/ReleaseAndStage/metadata.yml
+++ b/golang/ReleaseAndStage/metadata.yml
@@ -4,7 +4,7 @@ environments:
   - Stage
 stages:
   - name: Build Release
-    description: creates a new version then builds and deploys the project into the maven repository 
+    description: creates a new version then builds and pushes the image 
   - name: Rollout to Stage
     description: stages the new version into the Stage environment
  
